Remove check for dvdcss_interface_2

The current version of libdvdcss has removed the dvdcss_interface_2 symbol
so Brasero incorrectly assumes it's the wrong version.

Patch originally from https://bugzilla.redhat.com/show_bug.cgi?id=1193628

https://bugzilla.gnome.org/show_bug.cgi?id=744916