plugins/dvdcss/burn-dvdcss.c
@@ -95,9 +95,6 @@ brasero_dvdcss_library_init (BraseroPlugin *plugin)
 	if (!module)
 		goto error_doesnt_exist;
 
-	if (!g_module_symbol (module, "dvdcss_interface_2", &address))
-		goto error_version;
-
 	if (!g_module_symbol (module, "dvdcss_open", &address))
 		goto error_version;
 	dvdcss_open = address;
